Version 2.02.186 - 
================================
  Synchronize with udev when dropping snapshot.
  Add missing device synchronization point before removing pvmove node.
  Correctly set read_ahead for LVs when pvmove is finished.
  Fix metadata writes from corrupting with large physical block size.
  Report no_discard_passdown for cache LVs with lvs -o+kernel_discards.
  Prevent shared active mirror LVs with lvmlockd.

Version 2.02.185 - 13th May 2019
================================
  Fix change of monitoring in clustered volumes.
  Improve -lXXX%VG modifier which improves cache segment estimation.
  Add synchronization with udev before removing cached devices.
  Fix missing growth of _pmspare volume when extending _tmeta volume.
  Automatically grow thin metadata, when thin data gets too big.
  Add support for vgsplit with cached devices.
  Fix signal delivery checking race in libdaemon (lvmetad).
  Add missing Before=shutdown.target to LVM2 services to fix shutdown ordering.

Version 2.02.184 - 22nd March 2019
==================================
  Fix (de)activation of RaidLVs with visible SubLVs
  Change scan_lvs default to 0 so LVs are not scanned for PVs.
  Add scan_lvs config setting to control if lvm scans LVs for PVs.
  Fix missing proper initialization of pv_list struct when adding pv.

Version 2.02.183 - 07th December 2018
=====================================
  Avoid disabling lvmetad when repair does nothing.
  Fix component detection for md version 0.90.
  Use sync io if async io_setup fails, or use_aio=0 is set in config.
  Avoid opening devices to get block size by using existing open fd.

Version 2.02.182 - 30th October 2018
====================================
  Fix possible write race between last metadata block and the first extent.
  Fix filtering of md 1.0 devices so they are not seen as duplicate PVs.
  Fix lvconvert striped/raid0/raid0_meta -> raid6 regression.
  Add After=rbdmap.service to {lvm2-activation-net,blk-availability}.service.